Fix: Local Filter Overflow

--- a/src/components/MapHome/PopularSports/PopularSports.module.scss
+++ b/src/components/MapHome/PopularSports/PopularSports.module.scss
@@ -25,6 +25,7 @@
   flex-direction: column;
   align-items: center;
   z-index: 10;
+  overflow: visible;
 }
 
 .content {
